<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/artboard5"
    tools:context="com.futiletech.filthyrichlion.manageDbActivity">

    <TextView
        android:id="@+id/tv_questions"
        android:layout_width="156dp"
        android:layout_height="89dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sweethipster"
        android:text="@string/questions"
        android:textColor="@android:color/background_light"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toEndOf="@+id/tv_courses"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <TextView
        android:id="@+id/tv_manageDb"
        android:layout_width="429dp"
        android:layout_height="98dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sweethipster"
        android:text="@string/manageDatabase"
        android:textColor="@android:color/background_light"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <ImageButton
        android:id="@+id/btn_courses"
        android:layout_width="216dp"
        android:layout_height="242dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="gotoCoursesDatabase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_manageDb"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/library" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="202dp"
        android:layout_height="232dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="200dp"
        android:background="@android:color/transparent"
        android:onClick="gotoCourseQuestionsDatabase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_manageDb"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@drawable/question"
        android:layout_marginRight="200dp" />

    <TextView
        android:id="@+id/tv_courses"
        android:layout_width="132dp"
        android:layout_height="97dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sweethipster"
        android:text="@string/courses"
        android:textColor="@android:color/background_light"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911"
        android:layout_marginLeft="228dp" />
</android.support.constraint.ConstraintLayout>
